--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div id="answer">
         <h1>Game Over!</h1>
         <hr>
-        <p>The word was </p>
+        <p id="message"></p>
         <button>Restart</button>
     </div>
 </body>
