--- a/index.html
+++ b/index.html
@@ -44,6 +44,12 @@
         <p id="message"></p>
         <button id="restartBtn">Play Again</button>
     </div>
+    <div id="error">
+        <h1>Oops!</h1>
+        <hr>
+        <p id="error-message"></p>
+        <button id="error-button">Got it</button>
+    </div>
     <div id="settings">
         <h1>settings</h1>
         <button id="closeBtn"><img src="images/icons8-close-50.png"></button>
