--- a/index.html
+++ b/index.html
@@ -50,10 +50,11 @@
       <h1>settings</h1>
       <button id="closeBtn"><img src="images/icons8-close-50.png" /></button>
       <hr />
-      <p>Preferred Interface:</p>
-      <select>
-        <option>Light</option>
-        <option>Dark</option>
+      <p>Preferred Langauge:</p>
+      <select id="select">
+        <option value="en">English</option>
+        <option value="es">Spanish</option>
+        <option value="fr">French</option>
       </select>
       <hr />
       <div class="sbtn">
